--- a/css/main.css
+++ b/css/main.css
@@ -19,16 +19,46 @@ p {
     line-height: 1.6;
 }
 
+a {
+    color: rgb(29, 29 ,31);
+    text-decoration: none;
+}
+
 .global-nav {
     height: 44px;
 }
 
-.global-nav-links {
+.local-nav {
+    height: 52px;
+    border-bottom: 1px solid #ddd;
+}
+
+.global-nav-links,
+.local-nav-links {
     height: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     max-width: 1000px;
     /* 중앙정렬시 좌우 margin auto */
     margin: 0 auto;
+}
+
+.global-nav-links {
+    justify-content: space-between;
+}
+
+/* margin에 auto를 설정하면
+내가 가질 수 있는 여백을 다 소비하게 됨 */
+.local-nav-links .product-name {
+    margin-right: auto;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.local-nav-links a {
+    font-size: 0.8rem;
+}
+
+.local-nav-links a:not(.product-name) {
+    margin-left: 2em;
 }
